@@ -1,0 +1,10 @@
+#ifndef PICREGS_H
+
+#if defined(__pic16)
+  #include <pic18fregs.h>
+#else
+  #include <pic14regs.h>
+#endif
+
+#endif
+
